# editor-tab-manager

./: AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts
.github/workflows/: release-please.yml  release.yml
.serena/: project.yml
docs/: claude-status-badge-spec.md
docs/Dock切替タブ追従/: plan.md  progress.md  project-context.md
docs/Gitブランチ表示/: README.md  frontend-spec.md  implementation-plan.md  implementation-summary.md  project-context.md
docs/plans/tabbar-visibility-on-app-switch/: plan.md  progress.md  research-2026-03-12-tabbar-visibility-bug.md
docs/plans/tabbar-z-order-fix/: implementation-summary.md  plan.md  progress.md  result.md  troubleshoot-2026-03-02-1.md  troubleshoot-2026-03-02-2.md  troubleshoot-2026-03-02-3.md  troubleshoot-2026-03-02-4.md  troubleshoot-2026-03-02-5.md  troubleshoot-2026-03-02-6.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ax_helper.rs  ax_observer.rs  claude_status.rs  claude_status_tests.rs  cursor_ipc.rs  editor.rs  editor_config.rs  editor_model.rs  lib.rs  main.rs  notification.rs  observer.rs  vscode.rs  window_offset.rs  window_registry.rs
src/components/: AccessibilityGuide.tsx  AddTabMenu.tsx  ColorPicker.tsx  GroupTabList.tsx  Onboarding.tsx  Settings.test.tsx  Settings.tsx  Tab.tsx  TabBar.test.tsx  TabBar.tsx  VersionInfo.tsx  WorktreeTab.test.tsx  WorktreeTab.tsx
src/constants/: tabColors.ts
src/hooks/: useAppLifecycle.test.ts  useAppLifecycle.ts  useClaudeStatus.test.ts  useClaudeStatus.ts  useEditorWindows.test.ts  useEditorWindows.ts  useHistory.test.ts  useHistory.ts  useLanguage.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json
src/test/: setup.ts
src/types/: editor.ts
src/utils/: repositoryTabs.test.ts  repositoryTabs.ts  store.test.ts  store.ts  version.ts
