[package]
name = "editor-tab-manager"
version = "0.1.0"
description = "Editor Tab Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "editor_tab_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSDictionary", "NSRunLoop", "NSDate", "NSOperation", "NSArray", "NSValue"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "NSApplication", "NSScreen"] }
block2 = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0"
accessibility = "0.2"
accessibility-sys = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"
lazy_static = "1.4"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
